--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mongoose": "^5.8.3",
     "tsc-watch": "^4.0.0",
     "typescript": "^3.7.4"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.5.36"
   }
 }
