--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.8.3",
+    "pg": "^7.17.0",
     "tsc-watch": "^4.0.0",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.5.36"
+    "@types/mongoose": "^5.5.36",
+    "@types/pg": "^7.14.0"
   }
 }
