--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,12 @@
     "moduleResolution": "node",
     "pretty": true,
     "sourceMap": true,
-    "target": "es6",
     "outDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es6",
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
